--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
+  color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: space-between; */
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+form label {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 16px;
+}
+.App label input {
+  margin-left: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form {
+  display: flex;
+  flex-direction: column;
+  /* margin-bottom: 299px; */
+}
+
+div.row {
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem
+}
+
+label.col {
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+div.buttons {
+  display: flex;
+  justify-content: space-around;
+  margin: 1rem;
+}
+
+header {
+  width: 100%;
+  background-color: #4a5667;
+  height: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+header > h4 {
+  margin: 0px;
+}
+
+button {
+  border: none;
+  border-radius: 5px;
+  font-size: 14px;
+  padding: 1rem;
+}
+
+input, textarea {
+  padding: 1rem;
+  border: none;
+  border-radius: 5px;
+  font-size: 14px;
 }
