--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,14 @@
+html {
+  background-color: #282c34;
+}
+
 .App {
   text-align: center;
-  background-color: #282c34;
   color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: space-between; */
   font-size: calc(10px + 2vmin);
 }
 
@@ -23,7 +25,6 @@ form label {
 form {
   display: flex;
   flex-direction: column;
-  /* margin-bottom: 299px; */
 }
 
 div.row {
