--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,6 @@ label.col {
 div.buttons {
   display: flex;
   justify-content: space-around;
-  margin: 1rem;
 }
 
 header {
@@ -62,12 +61,16 @@ button {
   border: none;
   border-radius: 5px;
   font-size: 14px;
-  padding: 1rem;
+  padding: 8px;
 }
 
 input, textarea {
-  padding: 1rem;
+  padding: 8px;
   border: none;
   border-radius: 5px;
   font-size: 14px;
+}
+
+canvas { 
+  margin: 1rem;
 }
