--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ form label {
   align-items: center;
   justify-content: space-between;
   font-size: 16px;
+  width: 100%;
 }
 .App label input {
   margin-left: 1rem;
